--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 </head>
 <body>
 	<h1>Selamat Datang</h1>
-<<<<<<< HEAD
+	<h1>Wawewow</h1>
 	<h1>Feature A Sudah Tersedia</h1>
-=======
 	<h1>Feature B Sudah Tersedia</h1>
->>>>>>> feature-b
 </body>
 </html>
